--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@ width="600px"
 height="400px">
   
 
-  
+  <video controls>
+  <source src="real-estate.mp4" type="video/mp4">
+  <source src="real-estate.ogv" type="video/ogg">
 
     
 
