--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@ src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-developmen
 width="600px"
 height="400px">
   
-
-  <video controls>
+<video controls>
   <source src="real-estate.mp4" type="video/mp4">
   <source src="real-estate.ogv" type="video/ogg">
+  <p>Sorry your browser doesn't support HTML5 Video! Please <a href="http://browsehappy.com/?locale=en">upgrade your browser</a>.</p>
+</video>
 
     
 
