--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
 
     <!-- your code here! See README.md for deliverables -->
 
+  
+<video autoplay=""
+width="600px"
+height="400px"
+controls>
+  <source src="real-estate.mp4" type="video/mp4">
+  <source src="real-estate.ogv" type="video/ogg">
+  <p>Sorry your browser doesn't support HTML5 Video! Please <a href="http://browsehappy.com/?locale=en">upgrade your browser</a>.</p>
+</video>
+
+    
+
+
+  
+  <footer><a href="https://www.youtube.com/watch?v=Z_4TlZCvYL4">Video</a> by Leonard Lee</footer>
   </body>
 </html>
